--- a/src/app/shared/components/dynamic-input/dynamic-input.component.html
+++ b/src/app/shared/components/dynamic-input/dynamic-input.component.html
@@ -1,28 +1,33 @@
-<div class="wrap-input wrap-input--with-icon orders__search">
-  <input
-    #input
-    id="DIInput"
-    class="wrap-input__input"
-    name="item"
-    [(ngModel)]="value"
-    (input)="onChange.emit($event.target.value)"
-    (focus)="openDropdown()"
-    type="text"
-    required
-  >
-  <!-- <label class="wrap-input__label" for="">{{label}}</label> -->
-  <div class="wrap-input__icon" *ngIf="icon" [innerHTML]="icon"></div>
-  <div class="search-results dropdown search" [class.dropdown--open]="showDropdown">
+<div class="dynamic-input">
+  <div class="dynamic-input__wrap">
+    <input
+      #input
+      id="DIInput"
+      class="dynamic-input__input"
+      name="item"
+      [(ngModel)]="value"
+      (input)="onChange.emit($event.target.value)"
+      (focus)="openDropdown()"
+      type="text"
+      required
+    >
+    <div class="dynamic-input__triangle"></div>
+  </div>
+
+  <!--<div class="wrap-input__icon" *ngIf="icon" [innerHTML]="icon"></div>-->
+  <div class="dynamic-input__list dropdown search" [class.dropdown--open]="showDropdown">
     <ul class="dropdown__list">
-      <li
-        *ngFor="let item of filteredOptions; let i = index"
-        (click)="onSelectItem(item)"
-        class="dropdown__item"
-        [class.active]="i == arrowKeyLocation"
-      >
-        {{item.text}}
-      </li>
+      <perfect-scrollbar style="max-height: 285px;">
+        <li
+          *ngFor="let item of filteredOptions; let i = index"
+          (click)="onSelectItem(item)"
+          class="dropdown__item"
+          [class.active]="i == arrowKeyLocation"
+        >
+          {{item.text}}
+        </li>
+      </perfect-scrollbar>
     </ul>
   </div>
-  <div class="wrap-input__line"></div>
+  <!--<div class="wrap-input__line"></div>-->
 </div>
