--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -256,7 +256,7 @@
     height: 0;
     overflow: hidden;
     position: absolute;
-    top: 19px;
+    top: 16px;
     left: 16px;
     z-index: 4;
     background-color: #2E304D;
@@ -464,6 +464,64 @@
         text-decoration: none;
       }
     }
+  }
+  .login-menu{
+    position: relative;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 16px;
+    &:hover{
+      .login-menu__submenu{
+        height: auto;
+        padding: 0 12px;
+      }
+    }
+    &__icon{
+      svg{
+        opacity: .3;
+        vertical-align: middle;
+      }
+      &:hover{
+        svg{
+          opacity: 1;
+        }
+      }
+    }
+    &__submenu{
+      position: absolute;
+      top: 100%;
+      left: 0;
+      height: 0;
+      overflow: hidden;
+      background-color: #191A39;
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px;
+    }
+    &__submenu-item{
+      border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+      padding: 8px 0;
+      .item-title{
+        color:$grey;
+        margin-bottom: 4px;
+        white-space: nowrap;
+      }
+    }
+    .menu__link{
+      padding: 0;
+      padding-top: 16px;
+    }
+    .menu__link-text{
+      &:after{
+        display: none;
+      }
+    }
+    .menu__link--auth--log{
+      padding-bottom: 16px;
+    }
+
   }
   .toggle-theme{
     display: flex;
