--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -509,7 +509,7 @@
         white-space: nowrap;
       }
     }
-    .menu__link{
+    .login-menu__link{
       padding: 0;
       padding-top: 16px;
     }
@@ -518,9 +518,7 @@
         display: none;
       }
     }
-    .menu__link--auth--log{
-      padding-bottom: 16px;
-    }
+
 
   }
   .toggle-theme{
