--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -81,12 +81,12 @@
 
           <div class="wrap-input widget__input widget__input--mr32">
             <app-price-input [placeholder]="translateService.instant('Quantity of ') + arrPairName[0]" (customInput)="quantityInput($event)" name="quantityOf" formControlName="quantityOf"></app-price-input>
-            <div class="wrap-input__line"></div>
+            <!--<div class="wrap-input__line"></div>-->
           </div>
 
           <div class="wrap-input widget__input">
             <app-price-input [placeholder]="translateService.instant('Price in ') + arrPairName[1]" (customInput)="rateInput($event)" name="priceIn" formControlName="priceIn"></app-price-input>
-            <div class="wrap-input__line"></div>
+            <!--<div class="wrap-input__line"></div>-->
           </div>
 
         </div>
@@ -94,7 +94,7 @@
         <div class="row row--jcsb widget__trading-row">
           <div class="wrap-input widget__input">
             <app-price-input [placeholder]="translateService.instant('Total in ') + arrPairName[1]" (customInput)="totalInput($event)" name="totalIn" formControlName="totalIn"></app-price-input>
-            <div class="wrap-input__line"></div>
+            <!--<div class="wrap-input__line"></div>-->
           </div>
         </div>
 
@@ -107,7 +107,7 @@
                    formControlName="stop"
                    name="stop">
             <label class="wrap-input__label" for="">{{'Stop' | translate}}</label>
-            <div class="wrap-input__line"></div>
+            <!--<div class="wrap-input__line"></div>-->
           </div>
           <div class="wrap-input widget__input">
             <app-price-input [placeholder]="'Limit ' + arrPairName[1]" (customInput)="rateInput($event)" name="limit" formControlName="limit"></app-price-input>
@@ -116,11 +116,11 @@
         <div class="row row--jcsb widget__trading-row">
           <div class="wrap-input widget__input widget__input--mr32">
             <app-price-input [placeholder]=" translateService.instant('Quantity of ') + arrPairName[0]" (customInput)="quantityInput($event)" name="quantityOf" formControlName="quantityOf"></app-price-input>
-            <div class="wrap-input__line"></div>
+            <!--<div class="wrap-input__line"></div>-->
           </div>
           <div class="wrap-input widget__input">
             <app-price-input [placeholder]="translateService.instant('Total in ') + arrPairName[1]" (customInput)="totalInput($event)" name="totalIn" formControlName="totalIn"></app-price-input>
-            <div class="wrap-input__line"></div>
+            <!--<div class="wrap-input__line"></div>-->
           </div>
         </div>
       </form>
