fix widget margins, fix tools, and other fix

--- a/src/app/dashboard/components/tools/tools.component.html
+++ b/src/app/dashboard/components/tools/tools.component.html
@@ -14,7 +14,9 @@
   </div>
 
   <div class="info-tools">
-    <img src="assets/img/arr-toggle-right-white.svg" alt="">
+    <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272" stroke="#ffffff" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
     <div class="tools-label" >{{visibleToolsItems.length}} Tools</div>
   </div>
 </div>
