--- a/src/app/shared/components/dynamic-input/dynamic-input.component.scss
+++ b/src/app/shared/components/dynamic-input/dynamic-input.component.scss
@@ -49,7 +49,7 @@
     height: 100%;
     padding: 0 0 0 8px;
     //margin-right: 20px;
-    background-color: #191A39;
+    background-color: transparent;
     border: none;
     color:#fff;
     font-size: 16px;
@@ -72,7 +72,7 @@
     left: 8px;
     padding: 0 2px;
     color: #6C738C;
-    background-color: #191A39;
+    background-color: #212242;
     font-size: 10px;
     line-height: 12px;
   }
