--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -727,6 +727,9 @@
       //box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
       box-shadow: none;
     }
+    &__search{
+      bottom: 16px;
+    }
     &__search-input {
       display: block;
       width: 100%;
