--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -32,8 +32,8 @@
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
     &--trading{
-    margin-bottom: 7px;
-  }
+      margin-bottom: 7px;
+    }
     &--mob {
       display: flex;
       height: 44px;
@@ -162,10 +162,13 @@
     position: relative;
     &--pg{
       padding: 0 16px;
+      height: calc(100% - 30px);
       .widget__trading-form{
         margin: 0;
         width: calc(50% - 7.5px);
         max-width: 187px; 
+        display: flex;
+        flex-direction: column;
       }
     }
     &--mob {
@@ -841,10 +844,13 @@
     &__trading-form {
       display: block;
       margin: 0 24px;
+
       &--wr{
         display: flex;
         justify-content: space-between;
         padding-top: 31px;
+        height: calc(100% - 20px);
+        padding-bottom: 37px;
       }
       &--mob {
         display: none;
@@ -876,7 +882,7 @@
       .avaliable {
         flex-direction: row;
         align-items: center;
-            margin-top: 11px;
+        margin-top: 11px;
       }
 
     }
@@ -885,7 +891,7 @@
       height: 48px;
       line-height: 1;
       font-size: 24px;
-      margin: 27px 0 0;
+      margin: auto 0 0;
       //background-color: #264F92;
       //border-color: rgba(35, 123, 239, 0.5);
       &:hover {
