--- a/src/app/dashboard/components/trading/trading.component.scss
+++ b/src/app/dashboard/components/trading/trading.component.scss
@@ -49,3 +49,31 @@
     left: 21px;
   }
 }
+
+@media (max-width: 1200px) {
+  .wrap-input__input {
+    &:invalid {
+      ~ .wrap-input__label {
+        top: -5px;
+        left: 12px;
+        padding: 0 2px;
+        background-color: #191A39;
+        font-size: 10px;
+        line-height: 12px;
+      }
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  &:invalid {
+    ~ .wrap-input__label {
+      top: -5px;
+      left: 12px;
+      padding: 0 2px;
+      background-color: #183467;
+      font-size: 10px;
+      line-height: 12px;
+    }
+  }
+}
