--- a/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
+++ b/src/app/popups/login-popup-mobile/login-popup-mobile.component.html
@@ -140,7 +140,7 @@
         </button>
       </form>
       <div class="popup__links-wrap  popup__links-wrap--center">
-        <a class="popup__link" >{{'Lost Your Google Authenticator?' | translate}}</a>
+        <!--<a class="popup__link" >{{'Lost Your Google Authenticator?' | translate}}</a>-->
       </div>
     </ng-template>
 
