--- a/src/app/dashboard/components/trade-history/trade-history.component.html
+++ b/src/app/dashboard/components/trade-history/trade-history.component.html
@@ -90,12 +90,12 @@
               </div>
               <div class="table__cell table__cell--tal" style="width: 36%;">
             <span class="txt-indicate">
-            {{item.rate | number:'1.1-8' | replaceNumber}}
+            {{item.rate | roundCurrency | formatCurrency}}
             </span>
               </div>
               <div class="table__cell table__cell--tar" style="width: 36%;">
             <span [ngClass]="{'txt-red': item.operationType === 'SELL', 'txt-green': item.operationType === 'BUY'}">
-            {{item.amountBase | number:'1.8-8' | replaceNumber}}
+            {{item.amountBase | roundCurrency | formatCurrency}}
             </span>
               </div>
             </div>
