--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -442,6 +442,9 @@
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
   }
   &__chat-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: fixed;
     z-index: 2;
     bottom: 76px;
